--- a/archivos html/ejercicio10.html
+++ b/archivos html/ejercicio10.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-   <script src="Ejercicio10.js"></script>
+   <script src="../archivos.js/ejercicio10.js"></script>
 </body>
 </html>
