--- a/archivos html/ejercicio4.html
+++ b/archivos html/ejercicio4.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-   <script src="Ejercicio4.js"></script>
+   <script src="../archivos.js/ejercicio4.js"></script>
 </body>
 </html>
