--- a/archivos html/ejercicio7.html
+++ b/archivos html/ejercicio7.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-   <script src="Ejercicio7.js"></script>
+   <script src="../archivos.js/ejercicio7.js"></script>
 </body>
 </html>
