--- a/archivos html/ejercicio9.html
+++ b/archivos html/ejercicio9.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-   <script src="Ejercicio9.js"></script>
+   <script src="../archivos.js/ejercicio9.js"></script>
 </body>
 </html>
