--- a/archivos html/ejercicio1.html
+++ b/archivos html/ejercicio1.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-   <script src="../archivos.js/ejercicio8.js"></script>
+     <script src="/ejercicios/archivos.js/Ejercicio1.js"></script>
 </body>
 </html>
