--- a/archivos html/ejercicio3.html
+++ b/archivos html/ejercicio3.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-   <script src="Ejercicio3.js"></script>
+   <script src="../archivos.js/ejercicio3.js"></script>
 </body>
 </html>
