--- a/archivos html/ejercicio5.html
+++ b/archivos html/ejercicio5.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-   <script src="Ejercicio5.js"></script>
+   <script src="../archivos.js/ejercicio5.js"></script>
 </body>
 </html>
