--- a/archivos html/ejercicio6.html
+++ b/archivos html/ejercicio6.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-   <script src="Ejercicio6.js"></script>
+   <script src="../archivos.js/ejercicio6.js"></script>
 </body>
 </html>
