--- a/index.html
+++ b/index.html
@@ -4,81 +4,84 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="stylos/style.css">
 </head>
 <body>
-   <a href="archivos html/ejercicio1.html" class="items">Ejercicio 1</a>
-   <a href="archivos html/ejercicio2.html" class="items">Ejercicio 2</a>
-   <a href="archivos html/ejercicio3.html" class="items">Ejercicio 3</a>
-   <a href="archivos html/ejercicio4.html" class="items">Ejercicio 4</a>
-   <a href="archivos html/ejercicio5.html" class="items">Ejercicio 5</a>
-   <a href="archivos html/ejercicio6.html" class="items">Ejercicio 6</a>
-   <a href="archivos html/ejercicio7.html" class="items">Ejercicio 7</a>
-   <a href="archivos html/ejercicio8.html" class="items">Ejercicio 8</a>
-   <a href="archivos html/ejercicio9.html" class="items">Ejercicio 9</a>
-   <a href="archivos html/ejercicio10.html" class="items">Ejercicio 10</a>
-   <a href="" class="items">Ejercicio 11</a>
-   <a href="" class="items">Ejercicio 12</a>
-   <a href="" class="items">Ejercicio 13</a>
-   <a href="" class="items">Ejercicio 14</a>
-   <a href="" class="items">Ejercicio 15</a>
-   <a href="" class="items">Ejercicio 16</a>
-   <a href="" class="items">Ejercicio 17</a>
-   <a href="" class="items">Ejercicio 18</a>
-   <a href="" class="items">Ejercicio 19</a>
-   <a href="" class="items">Ejercicio 20</a>
-   <a href="" class="items">Ejercicio 21</a>
-   <a href="" class="items">Ejercicio 22</a>
-   <a href="" class="items">Ejercicio 23</a>
-   <a href="" class="items">Ejercicio 24</a>
-   <a href="" class="items">Ejercicio 25</a>
-   <a href="" class="items">Ejercicio 26</a>
-   <a href="" class="items">Ejercicio 27</a>
-   <a href="" class="items">Ejercicio 28</a>
-   <a href="" class="items">Ejercicio 29</a>
-   <a href="" class="items">Ejercicio 30</a>
-   <a href="" class="items">Ejercicio 31</a>
-   <a href="" class="items">Ejercicio 32</a>
-   <a href="" class="items">Ejercicio 33</a>
-   <a href="" class="items">Ejercicio 34</a>
-   <a href="" class="items">Ejercicio 35</a>
-   <a href="" class="items">Ejercicio 36</a>
-   <a href="" class="items">Ejercicio 37</a>
-   <a href="" class="items">Ejercicio 38</a>
-   <a href="" class="items">Ejercicio 39</a>
-   <a href="" class="items">Ejercicio 40</a>
-   <a href="" class="items">Ejercicio 41</a>
-   <a href="" class="items">Ejercicio 42</a>
-   <a href="" class="items">Ejercicio 43</a>
-   <a href="" class="items">Ejercicio 44</a>
-   <a href="" class="items">Ejercicio 45</a>
-   <a href="" class="items">Ejercicio 46</a>
-   <a href="" class="items">Ejercicio 47</a>
-   <a href="" class="items">Ejercicio 48</a>
-   <a href="" class="items">Ejercicio 49</a>
-   <a href="" class="items">Ejercicio 50</a>
-   <a href="" class="items">Ejercicio 51</a>
-   <a href="" class="items">Ejercicio 52</a>
-   <a href="" class="items">Ejercicio 53</a>
-   <a href="" class="items">Ejercicio 54</a>
-   <a href="" class="items">Ejercicio 55</a>
-   <a href="" class="items">Ejercicio 56</a>
-   <a href="" class="items">Ejercicio 57</a>
-   <a href="" class="items">Ejercicio 58</a>
-   <a href="" class="items">Ejercicio 59</a>
-   <a href="" class="items">Ejercicio 60</a>
-   <a href="" class="items">Ejercicio 61</a>
-   <a href="" class="items">Ejercicio 62</a>
-   <a href="" class="items">Ejercicio 63</a>
-   <a href="" class="items">Ejercicio 64</a>
-   <a href="" class="items">Ejercicio 65</a>
-   <a href="" class="items">Ejercicio 66</a>
-   <a href="" class="items">Ejercicio 67</a>
-   <a href="" class="items">Ejercicio 68</a>
-   <a href="" class="items">Ejercicio 69</a>
-   <a href="" class="items">Ejercicio 70</a>
-   <a href="" class="items">Ejercicio 71</a>
-   <a href="" class="items">Ejercicio 72</a>
-   <a href="" class="items">Ejercicio 73</a>
-   <a href="" class="items">Ejercicio 74</a>
+  <div class="content">
+    <a href="archivos html/ejercicio1.html" class="items">Ejercicio 1</a>
+    <a href="archivos html/ejercicio2.html" class="items">Ejercicio 2</a>
+    <a href="archivos html/ejercicio3.html" class="items">Ejercicio 3</a>
+    <a href="archivos html/ejercicio4.html" class="items">Ejercicio 4</a>
+    <a href="archivos html/ejercicio5.html" class="items">Ejercicio 5</a>
+    <a href="archivos html/ejercicio6.html" class="items">Ejercicio 6</a>
+    <a href="archivos html/ejercicio7.html" class="items">Ejercicio 7</a>
+    <a href="archivos html/ejercicio8.html" class="items">Ejercicio 8</a>
+    <a href="archivos html/ejercicio9.html" class="items">Ejercicio 9</a>
+    <a href="archivos html/ejercicio10.html" class="items">Ejercicio 10</a>
+    <a href="" class="items">Ejercicio 11</a>
+    <a href="" class="items">Ejercicio 12</a>
+    <a href="" class="items">Ejercicio 13</a>
+    <a href="" class="items">Ejercicio 14</a>
+    <a href="" class="items">Ejercicio 15</a>
+    <a href="" class="items">Ejercicio 16</a>
+    <a href="" class="items">Ejercicio 17</a>
+    <a href="" class="items">Ejercicio 18</a>
+    <a href="" class="items">Ejercicio 19</a>
+    <a href="" class="items">Ejercicio 20</a>
+    <a href="" class="items">Ejercicio 21</a>
+    <a href="" class="items">Ejercicio 22</a>
+    <a href="" class="items">Ejercicio 23</a>
+    <a href="" class="items">Ejercicio 24</a>
+    <a href="" class="items">Ejercicio 25</a>
+    <a href="" class="items">Ejercicio 26</a>
+    <a href="" class="items">Ejercicio 27</a>
+    <a href="" class="items">Ejercicio 28</a>
+    <a href="" class="items">Ejercicio 29</a>
+    <a href="" class="items">Ejercicio 30</a>
+    <a href="" class="items">Ejercicio 31</a>
+    <a href="" class="items">Ejercicio 32</a>
+    <a href="" class="items">Ejercicio 33</a>
+    <a href="" class="items">Ejercicio 34</a>
+    <a href="" class="items">Ejercicio 35</a>
+    <a href="" class="items">Ejercicio 36</a>
+    <a href="" class="items">Ejercicio 37</a>
+    <a href="" class="items">Ejercicio 38</a>
+    <a href="" class="items">Ejercicio 39</a>
+    <a href="" class="items">Ejercicio 40</a>
+    <a href="" class="items">Ejercicio 41</a>
+    <a href="" class="items">Ejercicio 42</a>
+    <a href="" class="items">Ejercicio 43</a>
+    <a href="" class="items">Ejercicio 44</a>
+    <a href="" class="items">Ejercicio 45</a>
+    <a href="" class="items">Ejercicio 46</a>
+    <a href="" class="items">Ejercicio 47</a>
+    <a href="" class="items">Ejercicio 48</a>
+    <a href="" class="items">Ejercicio 49</a>
+    <a href="" class="items">Ejercicio 50</a>
+    <a href="" class="items">Ejercicio 51</a>
+    <a href="" class="items">Ejercicio 52</a>
+    <a href="" class="items">Ejercicio 53</a>
+    <a href="" class="items">Ejercicio 54</a>
+    <a href="" class="items">Ejercicio 55</a>
+    <a href="" class="items">Ejercicio 56</a>
+    <a href="" class="items">Ejercicio 57</a>
+    <a href="" class="items">Ejercicio 58</a>
+    <a href="" class="items">Ejercicio 59</a>
+    <a href="" class="items">Ejercicio 60</a>
+    <a href="" class="items">Ejercicio 61</a>
+    <a href="" class="items">Ejercicio 62</a>
+    <a href="" class="items">Ejercicio 63</a>
+    <a href="" class="items">Ejercicio 64</a>
+    <a href="" class="items">Ejercicio 65</a>
+    <a href="" class="items">Ejercicio 66</a>
+    <a href="" class="items">Ejercicio 67</a>
+    <a href="" class="items">Ejercicio 68</a>
+    <a href="" class="items">Ejercicio 69</a>
+    <a href="" class="items">Ejercicio 70</a>
+    <a href="" class="items">Ejercicio 71</a>
+    <a href="" class="items">Ejercicio 72</a>
+    <a href="" class="items">Ejercicio 73</a>
+    <a href="" class="items">Ejercicio 74</a>
+  </div>
 </body>
 </html>
