--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a href="archivos html/ejercicio8.html" class="items">Ejercicio 8</a>
     <a href="archivos html/ejercicio9.html" class="items">Ejercicio 9</a>
     <a href="archivos html/ejercicio10.html" class="items">Ejercicio 10</a>
-    <a href="" class="items">Ejercicio 11</a>
+    <a href="archivos html/ejercicio11.html" class="items">Ejercicio 11</a>
     <a href="" class="items">Ejercicio 12</a>
     <a href="" class="items">Ejercicio 13</a>
     <a href="" class="items">Ejercicio 14</a>
