--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <a href="archivos html/ejercicio9.html" class="items">Ejercicio 9</a>
     <a href="archivos html/ejercicio10.html" class="items">Ejercicio 10</a>
     <a href="archivos html/ejercicio11.html" class="items">Ejercicio 11</a>
-    <a href="" class="items">Ejercicio 12</a>
-    <a href="" class="items">Ejercicio 13</a>
-    <a href="" class="items">Ejercicio 14</a>
-    <a href="" class="items">Ejercicio 15</a>
-    <a href="" class="items">Ejercicio 16</a>
-    <a href="" class="items">Ejercicio 17</a>
-    <a href="" class="items">Ejercicio 18</a>
+    <a href="archivos html/ejercicio12.html" class="items">Ejercicio 12</a>
+    <a href="archivos html/ejercicio13.html" class="items">Ejercicio 13</a>
+    <a href="archivos html/ejercicio14.html" class="items">Ejercicio 14</a>
+    <a href="archivos html/ejercicio15.html" class="items">Ejercicio 15</a>
+    <a href="archivos html/ejercicio16.html" class="items">Ejercicio 16</a>
+    <a href="archivos html/ejercicio17.html" class="items">Ejercicio 17</a>
+    <a href="archivos html/ejercicio18.html" class="items">Ejercicio 18</a>
     <a href="" class="items">Ejercicio 19</a>
     <a href="" class="items">Ejercicio 20</a>
     <a href="" class="items">Ejercicio 21</a>
