--- a/archivos html/ejercicio11.html
+++ b/archivos html/ejercicio11.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="..//archivos.js/Ejercicio11.js"></script>
+  <script src="../archivos.js/ejercicio11.js"></script>
 </body>
 </html>
