--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <a href="archivos html/ejercicio16.html" class="items">Ejercicio 16</a>
     <a href="archivos html/ejercicio17.html" class="items">Ejercicio 17</a>
     <a href="archivos html/ejercicio18.html" class="items">Ejercicio 18</a>
-    <a href="" class="items">Ejercicio 19</a>
-    <a href="" class="items">Ejercicio 20</a>
-    <a href="" class="items">Ejercicio 21</a>
-    <a href="" class="items">Ejercicio 22</a>
-    <a href="" class="items">Ejercicio 23</a>
+    <a href="archivos html/ejercicio19.html" class="items">Ejercicio 19</a>
+    <a href="archivos html/ejercicio20.html" class="items">Ejercicio 20</a>
+    <a href="archivos html/ejercicio21.html" class="items">Ejercicio 21</a>
+    <a href="archivos html/ejercicio22.html" class="items">Ejercicio 22</a>
+    <a href="archivos html/ejercicio23.html" class="items">Ejercicio 23</a>
     <a href="" class="items">Ejercicio 24</a>
     <a href="" class="items">Ejercicio 25</a>
     <a href="" class="items">Ejercicio 26</a>
