--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     <a href="archivos html/ejercicio21.html" class="items">Ejercicio 21</a>
     <a href="archivos html/ejercicio22.html" class="items">Ejercicio 22</a>
     <a href="archivos html/ejercicio23.html" class="items">Ejercicio 23</a>
-    <a href="" class="items">Ejercicio 24</a>
-    <a href="" class="items">Ejercicio 25</a>
-    <a href="" class="items">Ejercicio 26</a>
-    <a href="" class="items">Ejercicio 27</a>
-    <a href="" class="items">Ejercicio 28</a>
+    <a href="archivos html/ejercicio24.html" class="items">Ejercicio 24</a>
+    <a href="archivos html/ejercicio25.html" class="items">Ejercicio 25</a>
+    <a href="archivos html/ejercicio26.html" class="items">Ejercicio 26</a>
+    <a href="archivos html/ejercicio27.html" class="items">Ejercicio 27</a>
+    <a href="archivos html/ejercicio28.html" class="items">Ejercicio 28</a>
     <a href="" class="items">Ejercicio 29</a>
     <a href="" class="items">Ejercicio 30</a>
     <a href="" class="items">Ejercicio 31</a>
