--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
     <a href="archivos html/ejercicio26.html" class="items">Ejercicio 26</a>
     <a href="archivos html/ejercicio27.html" class="items">Ejercicio 27</a>
     <a href="archivos html/ejercicio28.html" class="items">Ejercicio 28</a>
-    <a href="" class="items">Ejercicio 29</a>
-    <a href="" class="items">Ejercicio 30</a>
-    <a href="" class="items">Ejercicio 31</a>
-    <a href="" class="items">Ejercicio 32</a>
-    <a href="" class="items">Ejercicio 33</a>
-    <a href="" class="items">Ejercicio 34</a>
-    <a href="" class="items">Ejercicio 35</a>
-    <a href="" class="items">Ejercicio 36</a>
-    <a href="" class="items">Ejercicio 37</a>
-    <a href="" class="items">Ejercicio 38</a>
+    <a href="archivos html/ejercicio29.html" class="items">Ejercicio 29</a>
+    <a href="archivos html/ejercicio30.html" class="items">Ejercicio 30</a>
+    <a href="archivos html/ejercicio31.html" class="items">Ejercicio 31</a>
+    <a href="archivos html/ejercicio32.html" class="items">Ejercicio 32</a>
+    <a href="archivos html/ejercicio33.html" class="items">Ejercicio 33</a>
+    <a href="archivos html/ejercicio34.html" class="items">Ejercicio 34</a>
+    <a href="archivos html/ejercicio35.html" class="items">Ejercicio 35</a>
+    <a href="archivos html/ejercicio36.html" class="items">Ejercicio 36</a>
+    <a href="archivos html/ejercicio37.html" class="items">Ejercicio 37</a>
+    <a href="archivos html/ejercicio38.html" class="items">Ejercicio 38</a>
     <a href="" class="items">Ejercicio 39</a>
     <a href="" class="items">Ejercicio 40</a>
     <a href="" class="items">Ejercicio 41</a>
