--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
     <a href="archivos html/ejercicio36.html" class="items">Ejercicio 36</a>
     <a href="archivos html/ejercicio37.html" class="items">Ejercicio 37</a>
     <a href="archivos html/ejercicio38.html" class="items">Ejercicio 38</a>
-    <a href="" class="items">Ejercicio 39</a>
-    <a href="" class="items">Ejercicio 40</a>
-    <a href="" class="items">Ejercicio 41</a>
-    <a href="" class="items">Ejercicio 42</a>
-    <a href="" class="items">Ejercicio 43</a>
-    <a href="" class="items">Ejercicio 44</a>
-    <a href="" class="items">Ejercicio 45</a>
-    <a href="" class="items">Ejercicio 46</a>
-    <a href="" class="items">Ejercicio 47</a>
+    <a href="archivos html/ejercicio38.html" class="items">Ejercicio 39</a>
+    <a href="archivos html/ejercicio40.html" class="items">Ejercicio 40</a>
+    <a href="archivos html/ejercicio41.html" class="items">Ejercicio 41</a>
+    <a href="archivos html/ejercicio42.html" class="items">Ejercicio 42</a>
+    <a href="archivos html/ejercicio43.html" class="items">Ejercicio 43</a>
+    <a href="archivos html/ejercicio44.html" class="items">Ejercicio 44</a>
+    <a href="archivos html/ejercicio45.html" class="items">Ejercicio 45</a>
+    <a href="archivos html/ejercicio46.html" class="items">Ejercicio 46</a>
+    <a href="archivos html/ejercicio47.html" class="items">Ejercicio 47</a>
     <a href="" class="items">Ejercicio 48</a>
     <a href="" class="items">Ejercicio 49</a>
     <a href="" class="items">Ejercicio 50</a>
