--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <a href="archivos html/ejercicio45.html" class="items">Ejercicio 45</a>
     <a href="archivos html/ejercicio46.html" class="items">Ejercicio 46</a>
     <a href="archivos html/ejercicio47.html" class="items">Ejercicio 47</a>
-    <a href="" class="items">Ejercicio 48</a>
+    <a href="archivos html/ejercicio48.html" class="items">Ejercicio 48</a>
     <a href="" class="items">Ejercicio 49</a>
     <a href="" class="items">Ejercicio 50</a>
     <a href="" class="items">Ejercicio 51</a>
