--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
     <a href="archivos html/ejercicio46.html" class="items">Ejercicio 46</a>
     <a href="archivos html/ejercicio47.html" class="items">Ejercicio 47</a>
     <a href="archivos html/ejercicio48.html" class="items">Ejercicio 48</a>
-    <a href="" class="items">Ejercicio 49</a>
-    <a href="" class="items">Ejercicio 50</a>
-    <a href="" class="items">Ejercicio 51</a>
-    <a href="" class="items">Ejercicio 52</a>
-    <a href="" class="items">Ejercicio 53</a>
-    <a href="" class="items">Ejercicio 54</a>
-    <a href="" class="items">Ejercicio 55</a>
-    <a href="" class="items">Ejercicio 56</a>
-    <a href="" class="items">Ejercicio 57</a>
+    <a href="archivos html/ejercicio49.html" class="items">Ejercicio 49</a>
+    <a href="archivos html/ejercicio50.html" class="items">Ejercicio 50</a>
+    <a href="archivos html/ejercicio51.html" class="items">Ejercicio 51</a>
+    <a href="archivos html/ejercicio52.html" class="items">Ejercicio 52</a>
+    <a href="archivos html/ejercicio53.html" class="items">Ejercicio 53</a>
+    <a href="archivos html/ejercicio54.html" class="items">Ejercicio 54</a>
+    <a href="archivos html/ejercicio55.html" class="items">Ejercicio 55</a>
+    <a href="archivos html/ejercicio56.html" class="items">Ejercicio 56</a>
+    <a href="archivos html/ejercicio57.html" class="items">Ejercicio 57</a>
     <a href="" class="items">Ejercicio 58</a>
     <a href="" class="items">Ejercicio 59</a>
     <a href="" class="items">Ejercicio 60</a>
