--- a/index.html
+++ b/index.html
@@ -65,23 +65,23 @@
     <a href="archivos html/ejercicio55.html" class="items">Ejercicio 55</a>
     <a href="archivos html/ejercicio56.html" class="items">Ejercicio 56</a>
     <a href="archivos html/ejercicio57.html" class="items">Ejercicio 57</a>
-    <a href="" class="items">Ejercicio 58</a>
-    <a href="" class="items">Ejercicio 59</a>
-    <a href="" class="items">Ejercicio 60</a>
-    <a href="" class="items">Ejercicio 61</a>
-    <a href="" class="items">Ejercicio 62</a>
-    <a href="" class="items">Ejercicio 63</a>
-    <a href="" class="items">Ejercicio 64</a>
-    <a href="" class="items">Ejercicio 65</a>
-    <a href="" class="items">Ejercicio 66</a>
-    <a href="" class="items">Ejercicio 67</a>
-    <a href="" class="items">Ejercicio 68</a>
-    <a href="" class="items">Ejercicio 69</a>
-    <a href="" class="items">Ejercicio 70</a>
-    <a href="" class="items">Ejercicio 71</a>
-    <a href="" class="items">Ejercicio 72</a>
-    <a href="" class="items">Ejercicio 73</a>
-    <a href="" class="items">Ejercicio 74</a>
+    <a href="archivos html/ejercicio58.html" class="items">Ejercicio 58</a>
+    <a href="archivos html/ejercicio59.html" class="items">Ejercicio 59</a>
+    <a href="archivos html/ejercicio60.html" class="items">Ejercicio 60</a>
+    <a href="archivos html/ejercicio61.html" class="items">Ejercicio 61</a>
+    <a href="archivos html/ejercicio62.html" class="items">Ejercicio 62</a>
+    <a href="archivos html/ejercicio63.html" class="items">Ejercicio 63</a>
+    <a href="archivos html/ejercicio64.html" class="items">Ejercicio 64</a>
+    <a href="archivos html/ejercicio65.html" class="items">Ejercicio 65</a>
+    <a href="archivos html/ejercicio66.html" class="items">Ejercicio 66</a>
+    <a href="archivos html/ejercicio67.html" class="items">Ejercicio 67</a>
+    <a href="archivos html/ejercicio68.html" class="items">Ejercicio 68</a>
+    <a href="archivos html/ejercicio69.html" class="items">Ejercicio 69</a>
+    <a href="archivos html/ejercicio70.html" class="items">Ejercicio 70</a>
+    <a href="archivos html/ejercicio71.html" class="items">Ejercicio 71</a>
+    <a href="archivos html/ejercicio72.html" class="items">Ejercicio 72</a>
+    <a href="archivos html/ejercicio73.html" class="items">Ejercicio 73</a>
+    <a href="archivos html/ejercicio74.html" class="items">Ejercicio 74</a>
   </div>
 </body>
 </html>
