--- a/index.html
+++ b/index.html
@@ -80,6 +80,22 @@
     <a href="archivos html/ejercicio70.html" class="items">Ejercicio 70</a>
     <a href="archivos html/ejercicio71.html" class="items">Ejercicio 71</a>
     <a href="archivos html/ejercicio72.html" class="items">Ejercicio 72</a>
+    <a href="archivos html/ejercicio73.html" class="items">Ejercicio 73</a>
+    <a href="archivos html/ejercicio74.html" class="items">Ejercicio 74</a>
+    <a href="archivos html/ejercicio75.html" class="items">Ejercicio 75</a>
+    <a href="archivos html/ejercicio76.html" class="items">Ejercicio 76</a>
+    <a href="archivos html/ejercicio77.html" class="items">Ejercicio 77</a>
+    <a href="archivos html/ejercicio78.html" class="items">Ejercicio 78</a>
+    <a href="archivos html/ejercicio79.html" class="items">Ejercicio 79</a>
+    <a href="archivos html/ejercicio80.html" class="items">Ejercicio 80</a>
+    <a href="archivos html/ejercicio81.html" class="items">Ejercicio 81</a>
+    <a href="archivos html/ejercicio82.html" class="items">Ejercicio 82</a>
+    <a href="archivos html/ejercicio83.html" class="items">Ejercicio 83</a>
+    <a href="archivos html/ejercicio84.html" class="items">Ejercicio 84</a>
+    <a href="archivos html/ejercicio85.html" class="items">Ejercicio 85</a>
+    <a href="archivos html/ejercicio86.html" class="items">Ejercicio 86</a>
+    <a href="archivos html/ejercicio87.html" class="items">Ejercicio 87</a>
+    <a href="archivos html/ejercicio88.html" class="items">Ejercicio 88</a>
 
   </div>
 </body>
